# Semantically-Guided-Feature-Matching-for-Visual-SLAM

./: .gitignore  CMakeLists.txt  README.md  dockerfile  main  main.cc  run.sh
.devcontainer/: devcontainer.json
config/: config.txt  kitti_params.txt
include/: ExractorNode.h  Extractor.h  Frame.h  Initializer.h  ORBextractor.h  ReadParams.h  SIFTextractor.h  SPextractor.h  SuperPoint.h
sample_input_directory/: config.txt
src/: Frame.cc  Initializer.cc  ORBextractor.cc  SIFTextractor.cc  SPextractor.cc  SuperPoint.cc
